FUSION #comment Multiple bug fixing including the fixes on IE issues

--- a/src/app/shared/checkbox/checkbox.component.scss
+++ b/src/app/shared/checkbox/checkbox.component.scss
@@ -20,6 +20,7 @@ $checkbox-icon-ripple-size: 15px;
   cursor: pointer;
 
   .checkbox-spacer {
+    display: block;
     height: 1px;
     width: $checkbox-label-spacer;
   }
